Removes duplicate leads SalesforceStg tables Created packages directory

--- a/flyway/conf/flyway.conf
+++ b/flyway/conf/flyway.conf
@@ -37,7 +37,7 @@
 #flyway.url=jdbc:sqlserver:////GEMOWER-LAP\SQLEXPRESS:1433;databaseName=test
 #flyway.url=jdbc:sqlserver://SQL-1E/CfA;instance=COCE_DEV_DS;integratedSecurity=true;
 #flyway.url=jdbc:sqlserver://GEMOWER-LAP/test;instance=SQLEXPRESS;integratedSecurity=true;
-flyway.url=jdbc:sqlserver://SQL-1E;instanceName=COCE_DEV_DS;databaseName=CfA_test;integratedSecurity=true;
+flyway.url=jdbc:sqlserver://SQL-1E;instanceName=COCE_DEV_DS;databaseName=CfA;integratedSecurity=true;
 #flyway.url=jdbc:jtds:sqlserver://localhost;databaseName=test;integratedSecurity=true;
 
 # Fully qualified classname of the jdbc driver (autodetected by default based on flyway.url)
